nuageup-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nuageup-service
spec:
  selector:
    app: nuageup
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
