nuageup-chart/templates/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nuageup-networkpolicy
spec:
  podSelector:
    matchLabels:
      app: nuageup
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: "172.16.49.64/32"
    - podSelector:
        matchLabels:
          role: friend
  egress:
  - {}
